--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.0.4",
     "plaiceholder": "^2.5.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.2"
   }
 }
