--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@img/sharp-linux-x64": "^0.33.2",
+    "axios": "^1.6.5",
     "date-fns": "^3.2.0",
     "html-react-parser": "^5.1.0",
     "html-to-text": "^9.0.5",
